--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login">Login</string>
     <string name="email">Email</string>
     <string name="login_chat">login</string>
+    <string name="password">password</string>
 </resources>
